// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - ContactDetails when logged in as buddy renders correctly 1`] = `
Array [
  <Header
    onButtonClick={[Function]}
    type="back"
  />,
  <PageContainer
    backGroundShape={true}
    loading={true}
  >
    <Box>
      <Typography
        component="h2"
        variant="h2"
      >
        Contact Details
      </Typography>
    </Box>
  </PageContainer>,
]
`;

exports[`Component - ContactDetails when logged in as buddy renders correctly 2`] = `
Array [
  <Header
    onButtonClick={[Function]}
    type="back"
  />,
  <PageContainer
    backGroundShape={true}
    loading={false}
  >
    <Box>
      <Typography
        component="h2"
        variant="h2"
      >
        Contact Details
      </Typography>
      <UserDetails
        details={
          Object {
            "email": "tom@wipro.com",
            "name": "Tom Hanks",
            "notes": "Nice guy",
            "phoneNumber": "1234567",
            "photo": "some-url",
            "position": "Dev Ops",
            "role": "NEWBIE",
            "startDate": "2010-01-01",
          }
        }
      />
    </Box>
  </PageContainer>,
]
`;

exports[`Component - ContactDetails when logged in as newbie renders correctly 1`] = `
Array [
  <Header
    onButtonClick={[Function]}
    type="back"
  />,
  <PageContainer
    backGroundShape={true}
    loading={false}
  >
    <Box>
      <Typography
        component="h2"
        variant="h2"
      >
        Contact Details
      </Typography>
      <UserDetails
        details={
          Object {
            "email": "tom@wipro.com",
            "name": "Tom Hanks",
            "phoneNumber": "1234567",
            "photo": "some-url",
            "position": "Dev Ops",
            "role": "BUDDY",
            "startDate": "2010-01-01",
          }
        }
      />
    </Box>
  </PageContainer>,
]
`;

exports[`Component - ContactDetails when logged in as newbie renders correctly 2`] = `
Array [
  <Header
    onButtonClick={[Function]}
    type="back"
  />,
  <PageContainer
    backGroundShape={true}
    loading={false}
  >
    <Box>
      <Typography
        component="h2"
        variant="h2"
      >
        Contact Details
      </Typography>
      <UserDetails
        details={
          Object {
            "email": "tom@wipro.com",
            "name": "Tom Hanks",
            "phoneNumber": "1234567",
            "photo": "some-url",
            "position": "Dev Ops",
            "role": "BUDDY",
            "startDate": "2010-01-01",
          }
        }
      />
    </Box>
  </PageContainer>,
]
`;
